--- a/frontend/src/Pages/Chat/Chat.css
+++ b/frontend/src/Pages/Chat/Chat.css
@@ -1,11 +1,11 @@
 .chat-container {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 90vh;
     justify-content: center;
     align-items: center;
     background-color: #f0f0f0;
-    padding: 20px;
+    /* padding: 20px; */
 }
 
 .chat-box {
